# BehaveGuard

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
behaveguard/: __init__.py  __main__.py
behaveguard/alerts/: __init__.py  alert_manager.py  alert_types.py  rules_engine.py
behaveguard/alerts/channels/: __init__.py  email_notifier.py  syslog.py  webhook.py
behaveguard/api/: __init__.py  schemas.py  server.py
behaveguard/api/routers/: __init__.py  alerts.py  health.py  models.py  processes.py
behaveguard/collector/: __init__.py  ebpf_collector.py  event_types.py  ring_buffer.py
behaveguard/collector/programs/: antiforensic_monitor.c  container_escape_monitor.c  dns_tunnel_monitor.c  file_monitor.c  injection_monitor.c  lolbin_monitor.c  network_monitor.c  process_monitor.c  syscall_monitor.c
behaveguard/config/: __init__.py  defaults.yaml  settings.py
behaveguard/dashboard/: __init__.py  app.py  callbacks.py
behaveguard/dashboard/layouts/: __init__.py  alerts_panel.py  model_stats.py  overview.py  process_view.py
behaveguard/features/: __init__.py  extractor.py  file_features.py  network_features.py  normalizer.py  process_features.py  syscall_features.py  window.py
behaveguard/models/: __init__.py  autoencoder.py  base_model.py  baseline_builder.py  ensemble.py  lstm_detector.py  model_store.py  threshold_tuner.py
behaveguard/scoring/: __init__.py  anomaly_scorer.py  explainer.py  severity.py
behaveguard/storage/: __init__.py  alert_store.py  event_store.py  model_registry.py
docs/: api_reference.md  architecture.md  ebpf_programs.md  ml_models.md
scripts/: benchmark.py  generate_training_data.sh  install_deps.sh
tests/integration/: test_api.py  test_full_pipeline.py
tests/simulations/: simulate_attack.py  simulate_normal.py  test_detection.py
tests/unit/: test_alerts.py  test_features.py  test_models.py  test_scorer.py
