[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaveguard"
version = "1.0.0"
description = "Runtime behavioral anomaly detection for Linux processes using eBPF and ML"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["security", "ebpf", "anomaly-detection", "linux", "malware"]
authors = [{ name = "urrra39" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
behaveguard = "behaveguard.__main__:main"

[project.urls]
Homepage = "https://github.com/urrra39/BehaveGuard"
Issues = "https://github.com/urrra39/BehaveGuard/issues"

# Core dependencies are sourced from requirements.txt so the two files never drift.
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["behaveguard*"]

[tool.setuptools.package-data]
behaveguard = ["collector/programs/*.c", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# "UP" (pyupgrade) is intentionally excluded: the pure-Python layers preserve
# Python 3.9 runtime-importability (see docs/architecture.md §6 — `typing.Union`
# rather than PEP 604 `X | Y` for runtime-evaluated aliases), which directly
# conflicts with pyupgrade's modernization rules. E/F/I/N/W remain enforced.
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
# The detector lazily imports several third-party libraries that ship no type
# stubs (torch, bcc, dash, plotly, aiohttp, influxdb-client, …); strict mode is
# therefore not an achievable gate. We keep meaningful type checking but ignore
# missing/untyped third-party imports rather than littering the code with casts.
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
# Heavy C-extension / unstubbed libraries are lazy-imported and are not part of
# our type surface; don't follow into their stubs (avoids third-party noise and
# stub-parsing crashes).
module = [
    "numpy.*",
    "torch.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "plotly.*",
    "aiohttp.*",
    "influxdb_client.*",
    "sklearn.*",
    "shap.*",
    "psutil.*",
    "bcc.*",
    "uvicorn.*",
    "yaml.*",
]
follow_imports = "skip"
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage is reported and uploaded to Codecov but NOT hard-gated: a fixed
# unit-test coverage floor is unrealistic for a systems project whose eBPF
# loaders, dashboard, and CLI cannot be exercised without a live kernel/browser.
addopts = "--cov=behaveguard --cov-report=term-missing"
